minor compatibility changes